# max-chat-backend

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.workspace.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.staging.example  Caddyfile.example  Caddyfile.staging.example  README.md  docker-compose.staging.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOY.md  GIT_SETUP.md  TZ.md
migrations/: env.py
migrations/versions/: 20260407_0001_initial_schema.py
src/max_chat_backend/: main.py
src/max_chat_backend/api/: __init__.py  router.py
src/max_chat_backend/api/v1/: __init__.py  health.py  internal.py  max_webhook.py
src/max_chat_backend/core/: bot_config.py  config.py  logging.py
src/max_chat_backend/db/: __init__.py  session.py
src/max_chat_backend/models/: __init__.py  base.py  entities.py
src/max_chat_backend/schemas/: __init__.py  internal.py  max_models.py
src/max_chat_backend/scripts/: __init__.py  delete_webhook.py  get_me.py  list_subscriptions.py  migrate.py  poll_updates.py  register_webhook.py
src/max_chat_backend/services/: llm_provider.py  max_client.py  message_templates.py  moderation.py  prompt_builder.py  rate_limiter.py  text_chunks.py
src/max_chat_backend/tasks/: __init__.py  celery_app.py  workflows.py
tests/: test_max_models.py  test_moderation.py  test_prompt_builder.py  test_text_chunks.py
