[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "max-chat-backend"
version = "0.1.0"
description = "Backend for MAX chat bot with DeepSeek"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.8.0",
  "python-multipart>=0.0.20",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.39",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
